--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "create-react-app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://maxpecheniuk.github.io/Weather_app/",
   "dependencies": {
     "autoprefixer": "7.1.6",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
